[project]
name = "komatsu-komtrax"
version = "0.1.0"
description = "Integrates with Komatsu Komtrax API for equipment monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydoover>=0.4.13",
]

[project.scripts]
export-config = "komatsu_komtrax.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
